--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
     <div class="console-container">
       <div id="jsConsole" class="console"></div>
     </div>
-    <div class="input-container">
-      <textarea id="inputField" placeholder="Enter code here..."></textarea>
-      <button id="executeBtn">Execute Code</button>
-      <button id="clearBtn">Clear Console</button>
-      <button id="exportBtn">Export Log</button>
-      <button id="themeBtn">Toggle Theme</button>
-      <div id="autocomplete"></div>
-    </div>
+   <div class="input-container">
+  <textarea id="inputField" placeholder="Enter code here..."></textarea>
+  <button id="executeBtn">Execute Code</button>
+  <button id="clearBtn">Clear Console</button>
+  <button id="exportBtn">Export Log</button>
+  <button id="themeBtn">Toggle Theme</button>
+  <button id="installBtn">Install App</button> <!-- Add this line -->
+  <div id="autocomplete"></div>
+</div>
   </div>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
   <script src="js/utils.js"></script>
