--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <script>
    if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('/JS-Console/service-worker.js')
       .then(registration => {
         console.log('Service Worker registered with scope:', registration.scope);
         appendLog('Service Worker registered with scope: ' + registration.scope, 'info');
