--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     gtag('config', 'G-X1QVWZVDC3');
   </script>
   <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.json">
+ <link rel="manifest" href="/JS-Console/manifest.json">
   <!-- iOS Support -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
