--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <script src="js/scripts.js"></script>
   <!-- Register Service Worker -->
   <script>
- if ('serviceWorker' in navigator) {
+if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('/JS-Console/service-worker.js')
       .then(registration => {
         console.log('Service Worker registered with scope:', registration.scope);
         appendLog('Service Worker registered with scope: ' + registration.scope, 'info');
