--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="A JavaScript console with games and utilities">
   <title>JavaScript Console</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <!-- Updated MathJax script path (will fix below) -->
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.js"></script>
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1QVWZVDC3"></script>
   <script>
@@ -17,7 +18,7 @@
     gtag('config', 'G-X1QVWZVDC3');
   </script>
   <!-- PWA Manifest -->
- <link rel="manifest" href="/JS-Console/manifest.json">
+  <link rel="manifest" href="/JS-Console/manifest.json">
   <!-- iOS Support -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -26,8 +27,8 @@
 </head>
 <body>
   <div id="bookmarksBar"></div>
+  <h1 class="title">JavaScript</h1> <!-- Simplified to a centered word -->
   <div class="container">
-    <h1 id="consoleTitle">JavaScript Console v2.0</h1>
     <div class="console-container">
       <div id="jsConsole" class="console"></div>
     </div>
@@ -37,7 +38,7 @@
       <button id="clearBtn">Clear Console</button>
       <button id="exportBtn">Export Log</button>
       <button id="themeBtn">Toggle Theme</button>
-      <button id="installBtn">Install App</button> <!-- Added statically for testing -->
+      <button id="installBtn">Install App</button>
       <div id="autocomplete"></div>
     </div>
   </div>
@@ -48,17 +49,17 @@
   <script src="js/scripts.js"></script>
   <!-- Register Service Worker -->
   <script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/JS-Console/service-worker.js')
-      .then(registration => {
-        // Log removed
-      })
-      .catch(error => {
-        console.error('Service Worker registration failed:', error);
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/JS-Console/service-worker.js')
+          .then(registration => {
+            // Log removed
+          })
+          .catch(error => {
+            console.error('Service Worker registration failed:', error);
+          });
       });
-  });
-}
+    }
   </script>
 </body>
 </html>
