--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="A JavaScript console with games and utilities">
   <title>JavaScript Console</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <!-- Updated MathJax script path (will fix below) -->
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.js"></script>
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1QVWZVDC3"></script>
@@ -27,7 +26,7 @@
 </head>
 <body>
   <div id="bookmarksBar"></div>
-  <h1 class="title">JavaScript</h1> <!-- Simplified to a centered word -->
+  <h1 class="title">JavaScript</h1>
   <div class="container">
     <div class="console-container">
       <div id="jsConsole" class="console"></div>
