--- a/offline.html
+++ b/offline.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Offline</title>
+  <title>Offline - JS-Console</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
+    h1 { color: #ff5555; }
+  </style>
 </head>
 <body>
   <h1>Offline</h1>
-  <p>Sorry, JS-Console is unavailable offline. Please connect to the internet.</p>
+  <p>Sorry, JS-Console is unavailable offline. Please connect to the internet and try again.</p>
 </body>
 </html>
