--- a/launcher.html
+++ b/launcher.html
@@ -11,7 +11,7 @@
   <h1>App Launcher</h1>
   <div class="launcher-container">
     <button onclick="window.location.href='/JS-Console/index.html'">JS-Console</button>
-    <!-- Add more app buttons here -->
+    <!-- Add more app buttons here in the future -->
   </div>
   <script src="/JS-Console/js/service-worker.js"></script>
 </body>
