--- a/launcher.html
+++ b/launcher.html
@@ -11,6 +11,9 @@
   <div class="launcher-container">
     <h1>App Launcher</h1>
     <button onclick="window.location.href='/JS-Console/index.html'">JS-Console</button>
+    <button onclick="window.location.href='https://example.com'">Example App</button>
+    <button onclick="window.location.href='https://github.com/criminalpear'">My GitHub</button>
+    <button onclick="alert('Coming soon!')">Future App</button>
   </div>
   <script src="/JS-Console/js/service-worker.js"></script>
 </body>
